fix(MonthPicker): Fix & refactor styling so it's correct on mobile

--- a/react/MonthPicker/CustomMonthPicker/CustomMonthPicker.less
+++ b/react/MonthPicker/CustomMonthPicker/CustomMonthPicker.less
@@ -1,5 +1,21 @@
 @import (reference) "~seek-style-guide/theme";
 
+.root {
+  display: flex;
+}
+
+.monthWrapper {
+  flex-basis: 0;
+  flex-grow: 1;
+  padding-right: @gutter-width / 2;
+}
+
+.yearWrapper {
+  flex-basis: 0;
+  flex-grow: 1;
+  padding-left: @gutter-width / 2;
+}
+
 .dropdown {
   width: 100%;
 }
